refactor: restructure folders and move handlers, services, repositories
