# cmd/docs/swagger.json
@@ -20,7 +20,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/common.SuccessResponse"
+                                    "$ref": "#/definitions/responses.SuccessResponse"
                                 },
                                 {
                                     "type": "object",
@@ -28,7 +28,7 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/player.PlayerRanking"
+                                                "$ref": "#/definitions/domain.PlayerRanking"
                                             }
                                         }
                                     }
@@ -39,7 +39,7 @@
                     "500": {
                         "description": "Failed to fetch player ranking",
                         "schema": {
-                            "$ref": "#/definitions/common.ErrorResponse"
+                            "$ref": "#/definitions/responses.ErrorResponse"
                         }
                     }
                 }
@@ -55,7 +55,7 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Tournament ID",
+                        "description": "Tournament id",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -67,7 +67,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/common.SuccessResponse"
+                                    "$ref": "#/definitions/responses.SuccessResponse"
                                 },
                                 {
                                     "type": "object",
@@ -81,9 +81,21 @@
                         }
                     },
                     "400": {
-                        "description": "Bad request",
+                        "description": "Invalid tournament ID",
                         "schema": {
-                            "$ref": "#/definitions/common.ErrorResponse"
+                            "$ref": "#/definitions/responses.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Tournament not found",
+                        "schema": {
+                            "$ref": "#/definitions/responses.ErrorResponse"
+                        }
+                    },
+                    "409": {
+                        "description": "Prizes already distributed",
+                        "schema": {
+                            "$ref": "#/definitions/responses.ErrorResponse"
                         }
                     }
                 }
@@ -91,33 +103,7 @@
         }
     },
     "definitions": {
-        "common.ErrorResponse": {
-            "type": "object",
-            "properties": {
-                "error": {
-                    "type": "string"
-                },
-                "message": {
-                    "type": "string"
-                },
-                "status": {
-                    "type": "integer"
-                }
-            }
-        },
-        "common.SuccessResponse": {
-            "type": "object",
-            "properties": {
-                "data": {},
-                "message": {
-                    "type": "string"
-                },
-                "status": {
-                    "type": "integer"
-                }
-            }
-        },
-        "player.PlayerRanking": {
+        "domain.PlayerRanking": {
             "type": "object",
             "properties": {
                 "account_balance": {
@@ -130,6 +116,29 @@
                     "type": "string"
                 },
                 "player_rank": {
+                    "type": "integer"
+                }
+            }
+        },
+        "responses.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer"
+                }
+            }
+        },
+        "responses.SuccessResponse": {
+            "type": "object",
+            "properties": {
+                "data": {},
+                "message": {
+                    "type": "string"
+                },
+                "status": {
                     "type": "integer"
                 }
             }
